// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly in when hidden 1`] = `
<Card
  className=""
  onClick={[Function]}
>
  <CardContent>
    <Image
      as="img"
      centered={true}
      ui={true}
    />
    <CardHeader>
      Test
    </CardHeader>
    <CardMeta />
  </CardContent>
</Card>
`;

exports[`should render correctly in when visible 1`] = `
<Card
  onClick={[Function]}
>
  <CardContent>
    <Label
      attached="top right"
    >
      <FormattedMessage
        defaultMessage="Hidden"
        id="dapp.visible.hiddenLabel"
        values={Object {}}
      />
    </Label>
    <Image
      as="img"
      centered={true}
      ui={true}
    />
    <CardHeader>
      Test
    </CardHeader>
    <CardMeta />
  </CardContent>
</Card>
`;
